--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,13 +21,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Change to source directory
-      run: |
-        cd sts
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r sts/requirements.txt
     - name: Run Tests
       run: |
+        cd sts
         python manage.py test
