--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r sts/requirements.txt
+        pip install -r sts/test_requirements.txt
     - name: Run Tests
       run: |
         cd sts
+        flake8 --config=lint.conf
         python manage.py test
+      env:
+        BUILD_ENV: ci
+        SECRET_KEY: TESTSECRETKET
+        DEBUG: 0
+        ALLOWED_HOSTS: localhost 127.0.0.1 [::1]
+        DATABASE_HOST: db
+        DATABASE_USER: user
+        DATABASE_PASSWORD: pass
+        DATABASE_NAME: dbname
+        DATABASE_PORT: 5432
