--- a/sts/lint.config
+++ b/sts/lint.config
@@ -1,2 +1,8 @@
 [flake8]
-ignore = E501 
+ignore = E501, E722, W504 
+exclude=
+    **/migrations/*,
+    **/settings/*
+    manage.py,
+    **/wsgi.py,
+    **/asgi.py
