--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run Tests
       run: |
         cd sts
-        flake8 --config=lint.conf
+        flake8 --config=lint.config
         python manage.py test
       env:
         BUILD_ENV: ci
