--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: CI/CD
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -41,3 +41,22 @@ jobs:
         DATABASE_PASSWORD: pass
         DATABASE_NAME: dbname
         DATABASE_PORT: 5432
+
+  deploy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: azure/docker-login@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build the Docker image for server
+      run: |
+        docker build . -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/sts-website_server:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/sts-website_server:latest
+    - name: Build the Docker image for nginx
+      run: |
+        docker build nginx/ -f nginx/Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/sts-website_nginx:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/sts-website_nginx:latest
